# lengkong_CMS

./: README.MD
admin_gui/: Cargo.toml  README.MD
admin_gui/crates/app/: Cargo.toml
admin_gui/crates/app/src/: main.rs
admin_gui/crates/ui/: Cargo.toml
admin_gui/crates/ui/src/: helloworld.rs
admin_gui/v2/: Cargo.toml
doc/sql/: lk_cms.sql
file_server/: README.MD  go.mod  main.go
file_server/config/: config.go
file_server/service/api/: api.go  resp.go
file_server/service/controller/: controller.go
server/: README.MD
ui_react/: README.MD
